--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mpociot/laravel-apidoc-generator",
+    "name": "wlady/laravel-apidoc-generator",
     "license": "MIT",
     "description": "Generate beautiful API documentation from your Laravel application",
     "keywords": [
@@ -15,27 +15,20 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "fzaninotto/faker": "~1.8",
-        "illuminate/routing": "^5.5|^6.0",
-        "illuminate/support": "^5.5|^6.0",
-        "illuminate/console": "^5.5|^6.0",
-        "mpociot/documentarian": "^0.3.0",
+        "php": "^8.0",
+        "ext-json": "*",
+        "illuminate/console": "^5.7|^6.0|^7.0|^8.0",
+        "illuminate/routing": "^5.7|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.7|^6.0|^7.0|^8.0",
+        "league/flysystem": "^1.0",
+        "mpociot/documentarian": "^0.4.0",
         "mpociot/reflection-docblock": "^1.0.1",
-        "ramsey/uuid": "^3.8",
-        "league/flysystem": "^1.0"
-    },
-    "require-dev": {
-        "orchestra/testbench": "3.5.* || 3.6.* || 3.7.*",
-        "phpunit/phpunit": "^6.0.0 || ^7.4.0",
-        "dingo/api": "2.0.0-alpha1",
-        "mockery/mockery": "^1.2.0",
-        "league/fractal": "^0.17.0",
-        "phpstan/phpstan": "^0.9.0 || ^0.10.0 || ^0.11.15"
+        "nunomaduro/collision": "^3.0|^4.0|^5.0",
+        "ramsey/uuid": "^3.8|^4.0",
+        "symfony/var-exporter": "^4.0|^5.0"
     },
     "suggest": {
-        "league/fractal": "Required for transformers support",
-        "nunomaduro/collision": "For better reporting of errors that are thrown when generating docs"
+        "league/fractal": "Required for transformers support"
     },
     "autoload": {
         "psr-4": {
@@ -49,14 +42,21 @@
     },
     "scripts": {
         "lint": "phpstan analyse -c ./phpstan.neon src",
-        "test": "phpunit --stop-on-failure",
-        "test-ci": "phpunit"
+        "test": "phpunit --stop-on-failure --exclude-group dingo",
+        "test-ci": "phpunit --exclude-group dingo"
     },
     "extra": {
         "laravel": {
             "providers": [
                 "Mpociot\\ApiDoc\\ApiDocGeneratorServiceProvider"
             ]
-       }
+        },
+        "branch-alias": {
+            "dev-v4": "4.x-dev"
+        }
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true
     }
 }
